# lgl-tools

./: .env.local.example  .eslintrc.json  .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json  turbo.json
.zenflow/tasks/base-platform-a928/: plan.md  requirements.md  spec.md
.zenflow/tasks/build-the-platform-e5bb/: plan.md  spec.md
.zenflow/tasks/rebrand-4295/: plan.md  report.md  spec.md
apps/web/: instrumentation-client.ts  jest.config.js  next.config.mjs  package.json  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  vercel.json
apps/web/emails/: charge-failed.tsx  client-invite.tsx  payment-failed.tsx  trial-ending.tsx  trial-expired.tsx  welcome.tsx
apps/web/src/: middleware.ts
emails/: client-invite.tsx  trial-ending.tsx  trial-expired.tsx
src/: middleware.ts
src/__tests__/: database.test.ts  env.test.ts  tools.test.ts
src/__tests__/api/: resend.test.ts
src/__tests__/components/: signup-form.test.tsx
src/app/: error.tsx  globals.css  layout.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
src/app/(admin)/: layout.tsx
src/app/(auth)/: error.tsx  layout.tsx
src/app/(protected)/: layout.tsx
src/app/tools/: error.tsx  layout.tsx
src/components/admin/: add-charge-dialog.tsx  add-existing-member-dialog.tsx  admin-nav.tsx  billing-client-detail.tsx  billing-clients-table.tsx  create-billing-client-form.tsx  (+10 more)
src/config/: tools.ts
src/hooks/: use-subscription.ts
src/lib/: admin.ts  cloudflare.ts  env.ts  resend.ts  stripe.ts
src/types/: database.ts  index.ts
standalone-tools/stream-chat-downloader/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
standalone-tools/stream-chat-downloader/src/lgl_chat_downloader/: __init__.py  cli.py  config.py  downloader.py  storage.py
supabase/migrations/: 001_initial.sql  002_admin_and_billing.sql  003_client_invites.sql  003_invoice_fields.sql  20260206_cloudflare_cleanup_queue.sql  20260206_drop_public_streams_policy.sql  20260206_live_streams.sql  20260212_workspace_billing_mode.sql  20260213_tool_registry.sql
(+184 files in other folders)
